ハンバーガーメニュー追加

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nagmmk portfolio</title>
+    <div class="hamburger-menu">
+        <input type="checkbox" id="menu-btn-check">
+        <label for="menu-btn-check" class="menu-btn"><span></span></label>
+    </div>
 </head>
 <body>
+    <h1>nagmmk portfolio</h1>
     
 </body>
 </html>
