--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>nagmmk portfolio</title>
     <div class="hamburger-menu">
         <input type="checkbox" id="menu-btn-check">
@@ -12,6 +13,6 @@
 </head>
 <body>
     <h1>nagmmk portfolio</h1>
-    
+   
 </body>
 </html>
