--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 </head>
 <body>
     <h1>nagmmk portfolio</h1>
+    <main>
+        <div class="about">
+            <a href="../nagmmkportfolio/img/pot.png"></a>
+
+        </div>
+    </main>
    
 </body>
 </html>
