サイト画像追加

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <h1>nagmmk portfolio</h1>
     <main>
         <div class="about">
-            <a href="../nagmmkportfolio/img/pot.png"></a>
+            <img src="../nagmmkportfolio/img/pot.png" alt="">
+            <img src="../nagmmkportfolio/img/pot2.png" alt="">
+            <img src="../nagmmkportfolio/img/pot3.png" alt="">
+            <img src="../nagmmkportfolio/img/pot5.png" alt="">
 
         </div>
     </main>
