画像サイズ変更

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>nagmmk portfolio</h1>
     <main>
         <div class="about">
-            <img src="../nagmmkportfolio/img/pot.png" alt="">
+            <img src="../nagmmkportfolio/img/pot.png" height="300px" wedth="400px" alt="">
             <img src="../nagmmkportfolio/img/pot2.png" alt="">
             <img src="../nagmmkportfolio/img/pot3.png" alt="">
             <img src="../nagmmkportfolio/img/pot5.png" alt="">
