メニュー、work追加

--- a/index.html
+++ b/index.html
@@ -9,18 +9,30 @@
     <div class="hamburger-menu">
         <input type="checkbox" id="menu-btn-check">
         <label for="menu-btn-check" class="menu-btn"><span></span></label>
+        
+        <div class="menu-content">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                    <a href="work.html">Work</a>
+                </li>
+            </ul>
+
+        </div>
     </div>
 </head>
 <body>
     <h1>nagmmk portfolio</h1>
     <main>
         <div class="about">
-            <img src="../nagmmkportfolio/img/pot.png" height="200px" wedth="300px" alt="">
-            <img src="../nagmmkportfolio/img/pot2.png" height="200px" wedth="300px"alt="">
-            <img src="../nagmmkportfolio/img/pot3.png" height="200px" wedth="300px"alt="">
-            <img src="../nagmmkportfolio/img/pot5.png" height="200px" wedth="300px"alt="">
-
+            <div class="saito">
+                <img src="../nagmmkportfolio/img/pot5.png" height="200px" wedth="300px"alt="">
+            </div>
+            <div class="">
+                
+            </div>
         </div>
+
     </main>
    
 </body>
