--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li>
                     <a href="index.html">Home</a>
                     <a href="work.html">Work</a>
+                    <a href="about">About</a>
                 </li>
             </ul>
         </div>
