画像リンク追加

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Work</h2>
         <div class="work">
             <div class="work1">
-                <img src="../nagmmkportfolio/img/pot5.png" height="200px" wedth="300px"alt="">
+                <a href="../nagmmkportfolio/img/pot5.png"></a><img src="../nagmmkportfolio/img/pot5.png" height="200px" wedth="300px"alt="">
             </div>
             <div class="work2">
                 <img src="" alt="">
@@ -51,8 +51,9 @@
         <ul>
             <li>HTML ★★★☆☆</li>
             <li>CSS　★★★☆☆</li>
-            <li>Adobe Illustrator　★★★☆☆ </li>
-            <li>Adobe Photoshop　★★★☆☆　</li>
+            <li>Adobe Illustrator　★★★★☆ </li>
+            <li>Adobe Photoshop　★★☆☆☆　</li>
+            <li>Maya ★★☆☆☆</li>
         </ul>
         
     </div>
