--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <h2>Work</h2>
         <div class="work">
             <div class="work1">
-                <a href="../nagmmkportfolio/img/pot5.png"></a><img src="../nagmmkportfolio/img/pot5.png" height="200px" wedth="300px"alt="">
+                <img src="../nagmmkportfolio/img/pot5.png" height="200px" wedth="300px"alt="">
             </div>
             <div class="work2">
-                <img src="" alt="">
+                <img src="../nagmmkportfolio/img/linimo character.png" height="200px" wedth="300px" alt="">
             </div>
             <div class="work3">
-                <img src="" alt="">
+                <img src="../nagmmkportfolio/img/animal stickers.png" height="200px" wedth="300px" alt="">
             </div>
             <div class="work4">
-                <img src="" alt="">
+                <img src="../nagmmkportfolio/img/gennpo.png" height="200px" wedth="300px" alt="">
             </div>
         </div>
 
