--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="work.css">
-    <title>Work</title>
+    <link rel="stylesheet" href="about.css">
+    <title>About</title>
     <div class="hamburger-menu">
         <input type="checkbox" id="menu-btn-check">
         <label for="menu-btn-check" class="menu-btn"><span></span></label>
@@ -26,13 +26,19 @@
     </div>
 </head>
 <body>
-    <main>
-        <h1>Work</h1>
-        <div >
-            <img src="../nagmmkportfolio/img/pot.png" height="200px" wedth="300px" alt="">
-            <img src="../nagmmkportfolio/img/pot2.png" height="200px" wedth="300px"alt="">
-            <img src="../nagmmkportfolio/img/pot3.png" height="200px" wedth="300px"alt="">
+     <div class="about">
+            <h3>About</h3>
+            <p>nagmmk</p>
+            <p>Aichi</p>
+            <h4>Skill</h4>
+            <ul>
+                <li>HTML ★★★☆☆</li>
+                <li>CSS　★★★☆☆</li>
+                <li>Adobe Illustrator　★★★★☆ </li>
+                <li>Adobe Photoshop　★★☆☆☆　</li>
+                <li>Maya ★★☆☆☆</li>
+            </ul>
+            
         </div>
-    </main>
 </body>
 </html>
