--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="work.html">Work</a>
                 </li>
                 <li>
-                    <a href="about">About</a>
+                    <a href="about.html">About</a>
                 </li>
             </ul>
         </div>
@@ -46,20 +46,5 @@
 
     </main>
 </body>
-<footer>
-    <div class="about">
-        <h3>About</h3>
-        <p>nagmmk</p>
-        <p>Aichi</p>
-        <h4>Skill</h4>
-        <ul>
-            <li>HTML ★★★☆☆</li>
-            <li>CSS　★★★☆☆</li>
-            <li>Adobe Illustrator　★★★★☆ </li>
-            <li>Adobe Photoshop　★★☆☆☆　</li>
-            <li>Maya ★★☆☆☆</li>
-        </ul>
-        
-    </div>
-</footer>
+
 </html>
