--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>nagmmk portfolio</title>
+    <h1>nagmmk portfolio</h1>
+    <div class="top">
+        <img src="../nagmmkportfolio/img/pot.png" alt="">
+    </div>
     <div class="hamburger-menu">
         <input type="checkbox" id="menu-btn-check">
         <label for="menu-btn-check" class="menu-btn"><span></span></label>
@@ -26,7 +30,7 @@
     </div>
 </head>
 <body>
-    <h1>nagmmk portfolio</h1>
+    
     <main>
         <h2>Work</h2>
         <div class="work">
