--- a/work.html
+++ b/work.html
@@ -29,6 +29,23 @@
     <main>
         <h1>Work</h1>
         <div >
+            <h2>Work</h2>
+        <div class="work">
+            <div class="work1">
+                <img src="../nagmmkportfolio/img/mietan1.PNG" height="300px" wedth="400px"alt="">
+            </div>
+            <div class="work2">
+                <img src="../nagmmkportfolio/img/linimo character.png" height="200px" wedth="300px" alt="">
+            </div>
+            <div class="work3">
+                <img src="../nagmmkportfolio/img/animal stickers.png" height="200px" wedth="300px" alt="">
+            </div>
+            <div class="work4">
+                <img src="../nagmmkportfolio/img/gennpo.png" height="200px" wedth="300px" alt="">
+            </div>
+        </div>
+
+
             <img src="../nagmmkportfolio/img/pot.png" height="200px" wedth="300px" alt="">
             <img src="../nagmmkportfolio/img/pot2.png" height="200px" wedth="300px"alt="">
             <img src="../nagmmkportfolio/img/pot3.png" height="200px" wedth="300px"alt="">
