--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="bg bg3"></div>
     <div class="content">
         <h1>nagmmk portfolio</h1>
-        <p>/大学生/名古屋/</p>
+        <p>大学生/名古屋</p>
     </div>
     </main>
 </body>
