--- a/work.html
+++ b/work.html
@@ -26,9 +26,8 @@
 </head>
 <body>
     <main>
-        <h1>Work</h1>
-        <div >
-            <h2>Work</h2>
+            <h1>Work</h1>
+            <p>-制作作品-</p>
         <div class="work">
             <div class="work1">
                 <img src="../nagmmkportfolio/img/mietan1.PNG" height="300px" wedth="400px"alt="">
