--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
     <div class="content">
-        <h1>nagmmk portfolio</h1>
-        <p>大学生/名古屋</p>
+        <h1>NAGMMK PORTFOLIO</h1>
+        <p>nagmmkのポートフォリオサイトです</p>
     </div>
     </main>
 </body>
