--- a/work.html
+++ b/work.html
@@ -39,10 +39,13 @@
                 <img src="../nagmmkportfolio/img/animal stickers.png" height="200px" wedth="300px" alt="">
             </div>
             <div class="work4">
-                <img src="../nagmmkportfolio/img/gennpo.png" height="200px" wedth="300px" alt="">
+                <img src="../nagmmkportfolio/img/kahou.png" height="200px" wedth="300px" alt="">
             </div>
             <div class="work5">
-                <img src="../nagmmkportfolio/img/gennpo.png" alt="">
+                <img src="../nagmmkportfolio/img/gennpo.png" height="200px" wedth="300px" alt="">
+            </div>
+            <div class="work6">
+                <img src="../nagmmkportfolio/img/visible ray.png" height="200px" wedth="300px" alt="">
             </div>
         </div>
     </main>
