--- a/work.html
+++ b/work.html
@@ -28,7 +28,7 @@
     <main>
             <h1>Work</h1>
             <p>-制作作品-</p>
-        <div class="work">
+        <div class="work1st">
             <div class="work1">
                 <img src="../nagmmkportfolio/img/mietan1.PNG" height="300px" wedth="400px"alt="">
             </div>
@@ -36,8 +36,10 @@
                 <img src="../nagmmkportfolio/img/linimo character.png" height="200px" wedth="300px" alt="">
             </div>
             <div class="work3">
-                <img src="../nagmmkportfolio/img/animal stickers.png" height="200px" wedth="300px" alt="">
+                <img src="../nagmmkportfolio/img/animal stickers.png" height="300px" wedth="400px" alt="">
             </div>
+        </div>
+        <div class="work2st">
             <div class="work4">
                 <img src="../nagmmkportfolio/img/kahou.png" height="200px" wedth="300px" alt="">
             </div>
