--- a/work1.html
+++ b/work1.html
@@ -11,7 +11,19 @@
     <h1>作品名</h1>
 
     <div>
-        <img src="" alt="">
+        <img src="../nagmmkportfolio/img/pot.png" height="200px" wedth="300px" alt="">
+    </div>
+    <div>
+        <img src="../nagmmkportfolio/img/pot2.png" height="200px" wedth="300px" alt="">
+    </div>
+    <div>
+        <img src="../nagmmkportfolio/img/pot3.png" height="200px" wedth="300px" alt="">
+    </div>
+    <div>
+        <img src="../nagmmkportfolio/img/pot4.png" height="200px" wedth="300px" alt="">
+    </div>
+    <div>
+        <img src="../nagmmkportfolio/img/pot5.png" height="200px" wedth="300px" alt="">
     </div>
     <ul>
         <li>制作ソフト</li>
