--- a/work2.html
+++ b/work2.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>work2</title>
+    <link rel="stylesheet" href="work2.css">
+    <div class="hamburger-menu">
+        <input type="checkbox" id="menu-btn-check">
+        <label for="menu-btn-check" class="menu-btn"><span></span></label>
+         <div class="menu-content">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="work.html">Work</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </head>
 <body>
-    
+    <main>
+        <h1>Original character</h1>
+        <p>-Linimoooo-</p>
+
+        
+
+        <div class="linimo">
+            <img src="../nagmmkportfolio/img/linimo character.png" height="400px" wedth="500px" alt="">
+        </div>
+
+        <div class="ex">
+            <div>
+                愛知高速交通の磁気浮上式鉄道線「リニモ」をテーマにオリジナルのキャラクターを作成しました。
+            </div>
+            <div>
+                リニモの「モ」を伸ばすと、牛の鳴き声になることから牛を題材にし、
+            </div>
+            <div>
+                リニモの実際の車体をできるだけ再現することを意識して作成しました。
+            </div>
+        </div>
+
+        <ul>
+            <li>制作アプリ</li>
+                <div>Adobe Illustrator</div>
+            <li>制作時間</li>
+                <div>約５時間</div>
+        </ul>
+    </main>
 </body>
 </html>
