--- a/work3.html
+++ b/work3.html
@@ -26,8 +26,8 @@
 </head>
 <body>
     <main>
-        <h1>Stecker</h1>
-        <p>-car stickers design-</p>
+        <h1>Stecker design</h1>
+        <p>- car stickers design -</p>
 
         <div class="animal">
             <img src="../nagmmkportfolio/img/animal stickers.png" height="400px" wedth="500px" alt="">
@@ -40,13 +40,14 @@
             <div>
                 見やすさや、分かりやすさを意識して作成しました。
             </div>
+
         </div>
 
         <ul>
             <li>制作アプリ</li>
                 <div>Adobe Illustrator</div>
             <li>制作時間</li>
-                <div>約1時間</div>
+                <div>約３時間</div>
         </ul>
 
     </main>
