--- a/work6.html
+++ b/work6.html
@@ -5,8 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="work6.css">
+    <div class="hamburger-menu">
+        <input type="checkbox" id="menu-btn-check">
+        <label for="menu-btn-check" class="menu-btn"><span></span></label>
+         <div class="menu-content">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="work.html">Work</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</head>
 </head>
 <body>
-    
+    <main>
+        <h1>Poster design</h1>
+        <p>- 減法混色 -</p>
+
+        <div class="gennpo">
+            <img src="../nagmmkportfolio/img/gennpo.png" height="400px" wedth="500px" alt="">
+        </div>
+
+        <div class="ex">
+            <div>
+                減法混色について説明するポスターデザインを作成しました。
+            </div>
+            <div>
+                色やイラストなど目で見てイメージしやすいデザインを意識して作成しました。
+            </div>
+        </div>
+
+        <ul>
+            <li>制作アプリ</li>
+                <div>Adobe Illustrator</div>
+            <li>制作時間</li>
+                <div>約1時間</div>
+        </ul>
+
+    </main>
 </body>
 </html>
