--- a/work4.html
+++ b/work4.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>work4</title>
+    <link rel="stylesheet" href="work4.css">
+    <div class="hamburger-menu">
+        <input type="checkbox" id="menu-btn-check">
+        <label for="menu-btn-check" class="menu-btn"><span></span></label>
+         <div class="menu-content">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="work.html">Work</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </head>
 <body>
-    
+    <main>
+        <h1>Poster design</h1>
+        <p>- 可視光線 -</p>
+
+        <div class="ray">
+            <img src="../nagmmkportfolio/img/visible ray.png" height="400px" wedth="500px" alt="">
+        </div>
+
+        <div class="ex">
+            <div>
+                可視光線について知らない人に向けたポスターを作成しました。
+            </div>
+            <div>
+                パッと見て可視光線についてイメージできるようなデザインになるよう意識しました。
+            </div>
+        </div>
+
+        <ul>
+            <li>制作アプリ</li>
+                <div>Adobe Illustrator</div>
+            <li>制作時間</li>
+                <div>約1時間</div>
+        </ul>
+
+    </main>
 </body>
 </html>
