--- a/work5.html
+++ b/work5.html
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>work5</title>
+    <link rel="stylesheet" href="work5.css">
+    <div class="hamburger-menu">
+        <input type="checkbox" id="menu-btn-check">
+        <label for="menu-btn-check" class="menu-btn"><span></span></label>
+         <div class="menu-content">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="work.html">Work</a>
+                </li>
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</head>
 </head>
 <body>
-    
+    <main>
+        <h1>Poster design</h1>
+        <p>- 加法混色 -</p>
+
+        <div class="kahou">
+            <img src="../nagmmkportfolio/img/kahou.png" height="400px" wedth="500px" alt="">
+        </div>
+
+        <div class="ex">
+            <div>
+                加法混色について説明するポスターデザインを制作しました。
+            </div>
+            <div>
+                中心の三原色を際立たせるようなデザインを意識しました。
+            </div>
+        </div>
+
+        <ul>
+            <li>制作アプリ</li>
+                <div>Adobe Illustrator</div>
+            <li>制作時間</li>
+                <div>約３時間</div>
+        </ul>
+
+    </main>
 </body>
 </html>
