--- a/about.html
+++ b/about.html
@@ -26,19 +26,50 @@
     </div>
 </head>
 <body>
-     <div class="about">
-            <h3>About</h3>
-            <p>nagmmk</p>
-            <p>Aichi</p>
-            <h4>Skill</h4>
-            <ul>
-                <li>HTML ★★★☆☆</li>
-                <li>CSS　★★★☆☆</li>
-                <li>Adobe Illustrator　★★★★☆ </li>
-                <li>Adobe Photoshop　★★☆☆☆　</li>
-                <li>Maya ★★☆☆☆</li>
-            </ul>
+     <main>
+        <div class="about">
+            <h1>About</h1>
+            <h3>- nagmmkについて -</h3>
+            <div class="basic">
+                <ul>
+                    <p>Basic</p>
+                    <li>✔️  愛知</li>
+                    <li>✔️  大学生</li>
+                </ul>
+            </div>
+
+            <div class="hobby">
+                <ul>
+                    <p>Like</p>
+                    <li>✔️  漫画</li>
+                    <li>✔️  映画</li>
+                    <li>✔️  音楽</li>
+                    <li>✔️  動画制作</li>
+                </ul>
+            </div>
+            
+            <div class="skill">
+                <h4>Skill</h4>
+                <ul>
+                    <li>HTML ★★★☆☆</li>
+                        <p>基本の操作 ◎</p>
+                    <li>CSS　★★★☆☆</li>
+                        <p>基本の操作 ◎</p>
+                    <li>Adobe Illustrator　★★★★☆ </li>
+                        <p>基本の操作 ◎</p>
+                        <p>workページにあるようなデザインは作成可能</p>
+                    <li>Adobe Photoshop　★★☆☆☆　</li>
+                        <p>基本の操作 ◎</p>
+                        <li>Maya ★★☆☆☆</li>
+                        <p>基本の操作 ○</p>
+                        <p>最近使い始めたため勉強中</p>
+                    <li>WordPress　★★★☆☆</li>
+                        <p>基本の操作 ◎</p>
+                        <p>workページにあるような簡単なサイトは作成可能</p>
+                </ul>
+            </div>
             
         </div>
+     </main>
 </body>
 </html>
