--- a/work.html
+++ b/work.html
@@ -31,31 +31,31 @@
         <div class="work1st">
             <div class="work1">
                 <img src="../nagmmkportfolio/img/mietan1.PNG" height="300px" wedth="400px"alt="">
-                <a href="work1.html" class="btn-circle">more ></a>
+                <a href="work1.html" class="btn-circle">『web design』 more ></a>
             </div>
             <div class="work2">
                 <img src="../nagmmkportfolio/img/linimo character.png" height="200px" wedth="300px" alt="">
-                <a href="work2.html" class="btn-circle2">more ></a>
+                <a href="work2.html" class="btn-circle2">『character design』more ></a>
             </div>
         </div>
         <div class="work2st">
             <div class="work3">
                 <img src="../nagmmkportfolio/img/animal stickers.png" height="300px" wedth="400px" alt="">
-                <a href="work3.html" class="btn-circle3">more ></a>
+                <a href="work3.html" class="btn-circle3">『sticker design』more ></a>
             </div>
             <div class="work4">
                 <img src="../nagmmkportfolio/img/visible ray.png" height="200px" wedth="300px" alt="">
-                <a href="work4.html" class="btn-circle4">more ></a>
+                <a href="work4.html" class="btn-circle4">『poster design』more ></a>
             </div>
         </div>
         <div class="work3st">
             <div class="work5">
                 <img src="../nagmmkportfolio/img/kahou.png" height="200px" wedth="300px" alt="">
-                <a href="work5.html" class="btn-circle5">more ></a>
+                <a href="work5.html" class="btn-circle5">『poster design』more ></a>
             </div>
             <div class="work6">
                 <img src="../nagmmkportfolio/img/gennpo.png" height="200px" wedth="300px" alt="">
-                <a href="work6.html" class="btn-circle6">more ></a>
+                <a href="work6.html" class="btn-circle6">『poster design』more ></a>
             </div>
         </div>
     </main>
