--- a/work1.html
+++ b/work1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>work1</title>
+    <title>Webサイト</title>
     <link rel="stylesheet" href="work1.css">
     <div class="hamburger-menu">
         <input type="checkbox" id="menu-btn-check">
